--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -38,7 +38,7 @@ jobs:
         
           script: |
             cd /root/TreeTap_Backend
-            pkill python
+            pkill -f "gunicorn -D app.main:app --worker-class uvicorn.workers.UvicornWorker"
             source setenv.sh
             echo $MONGO_URI
-            python -m gunicorn -D app.main:app --worker-class uvicorn.workers.UvicornWorker
+            gunicorn -D app.main:app --worker-class uvicorn.workers.UvicornWorker
